[package]
name = "orml-xcm"
description = "XCM message helpers."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/xcm"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Acala Developers"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }

sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }

xcm = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "gav-xcm-v3" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "gav-xcm-v3" }

[dev-dependencies]
xcm-executor  = { git = "https://github.com/paritytech/polkadot", branch = "gav-xcm-v3" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"xcm/std",
	"pallet-xcm/std",
]
try-runtime = ["frame-support/try-runtime"]
