[package]
name = "orml-xnftokens"
description = "Cross-chain non fungible token transfer."
repository = "https://github.com/ant8ee/xnftool"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Acala Developers"]
edition = "2021"

[dependencies]
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }

# substrate
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }

# cumulusp
cumulus-primitives-core = { path = "../../../cumulus/primitives/core", default-features = false  }

# polkadot
pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "gav-xcm-v3" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "gav-xcm-v3" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "gav-xcm-v3" }

# orml
orml-xcm-support = { path = "../xcm-support", default-features = false }
orml-traits = { path = "../traits", default-features = false}

[dev-dependencies]
# substrate
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "master" }

# cumulus
# cumulus-primitives-core = { git = "https://github.com/ant8ee/cumulus", branch = "gav-xcm-v3" }
# cumulus-pallet-dmp-queue = { git = "https://github.com/ant8ee/cumulus", branch = "gav-xcm-v3" }
# cumulus-pallet-xcmp-queue = { git = "https://github.com/ant8ee/cumulus", branch = "gav-xcm-v3" }
# cumulus-pallet-xcm = { git = "https://github.com/ant8ee/cumulus", branch = "gav-xcm-v3" }
# parachain-info = { git = "https://github.com/ant8ee/cumulus", branch = "gav-xcm-v3" }

cumulus-primitives-core = {  path = "../../../cumulus/primitives/core"  }
cumulus-pallet-dmp-queue = { path = "../../../cumulus/pallets/dmp-queue" }
cumulus-pallet-xcmp-queue = { path = "../../../cumulus/pallets/xcmp-queue" }
cumulus-pallet-xcm = { path = "../../../cumulus/pallets/xcm" }
parachain-info = { path = "../../../cumulus/parachains/pallets/parachain-info" }


# polkadot
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "gav-xcm-v3" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "gav-xcm-v3" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "gav-xcm-v3" }
xcm-simulator = { git = "https://github.com/paritytech/polkadot", branch = "gav-xcm-v3" }

# orml
orml-tokens = { path = "../tokens" }
orml-xcm = { path = "../xcm" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"cumulus-primitives-core/std",
	"xcm/std",
	"xcm-executor/std",
	"orml-xcm-support/std",
	"orml-traits/std",
]
runtime-benchmarks = [
	"pallet-xcm/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
